[SONAR} cleanup issues